--- a/experiment_configs/base.yaml
+++ b/experiment_configs/base.yaml
@@ -1,4 +1,3 @@
-# train and validate on all classes with nalancing
 
 model:
   class_path: model.PlClassificationModel
@@ -22,5 +21,5 @@ data:
     base_path: './datasets/catsvsdogs_small_images'
     batch_size: 16
     image_size: 224
-    augmentation_strategy: hard_1  # noaug
+    augmentation_strategy: hard_1
     train_workers: 2
