--- a/experiment_configs/base.yaml
+++ b/experiment_configs/base.yaml
@@ -1,14 +1,11 @@
-
 model:
   class_path: model.PlClassificationModel
   init_args:
     backbone_lr: 0.0001
     classifier_lr: 0.001
-    base_model: resnet18
+    base_model: timm/resnet18
     backbone_pretrained: True
     num_classes: 2
-    pooling: max
-    normalize_pool: false
     clf_head: standard
     checkpoint_monitor: val/f1_macro
     optimizing_strategy: regular1 #cycling #
@@ -17,8 +14,9 @@ model:
 data:
   class_path: data.BaseDatasetAllClasses
   init_args:
-    path_to_labels_df: './datasets/catsvsdogs_small.df.pickle'
-    base_path: './datasets/catsvsdogs_small_images'
+    base_model_data: timm/resnet18
+    path_to_labels_df: '/home/i008/served_models/datasets/catsvsdogs_small.df.pickle'
+    base_path: '/home/i008/served_models/datasets/catsvsdogs_small_images'
     batch_size: 16
     image_size: 224
     augmentation_strategy: hard_1
